--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,33 +2,35 @@
 body {
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     font-family: "Lato", sans-serif;
+    // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
+    // padding: 3rem; //padding around all the body...gives it a unique look.
 
 }
 
 
 
 .heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
+    // color: $color-white;
+    color: $color-teal;
+    // text-transform: uppercase;
 
     backface-visibility: hidden;
-    margin-bottom: 6rem;
+    // margin-bottom: 6rem;
 
     
     &--main {
         display: block;
-        font-size: 6rem;
-        font-weight: 400;
-        letter-spacing: 3.5rem;
+        font-size: 3rem;
+        // font-weight: 400;
+        // letter-spacing: 3.5rem;
 
-        animation-name: moveInLeft;
-        animation-duration: 1s;
-        animation-timing-function: ease-out;
+        // animation-name: moveInLeft;
+        // animation-duration: 1s;
+        // animation-timing-function: ease-out;
         
         /* 
         animation-delay: 3s;
@@ -38,11 +40,17 @@ body {
 
     &--sub {
         display: block;
-        font-size: 2rem;
-        font-weight: 700;
-        letter-spacing: 1.75rem;
-        animation: moveInRight 1s ease-out;
+        font-size: 2.6rem;
+        margin-top: -1rem;
+        // font-weight: 700;
+        // letter-spacing: 1.75rem;
+        // animation: moveInRight 1s ease-out;
+        float: right;
     }
+}
+
+.emphasize {
+    font-style: italic;
 }
 
 .heading-secondary {
