--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,31 +1,44 @@
 .header {
     height: 95vh;
     /* background-image: url(../img/hero.jpg); */
-    background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.801),
-        rgba($color-primary-dark, 0.801)),
-    url(../img/hero.jpg);
-    background-size: cover;
-    background-position: top;
-    position: relative;
+    // background-image: linear-gradient(
+    //     to right bottom,
+    //     rgba($color-primary-light, 0.801),
+    //     rgba($color-primary-dark, 0.801)),
+    // url(../img/hero.jpg);
+    // background-size: cover;
+    // background-position: top;
+    // position: relative;
 
     &__logo-box {
-        position: absolute;
-        top: 4rem;
-        left: 4rem;
+        // position: absolute;
+        // top: 4rem;
+        // left: 4rem;
+        float: left;
+        margin-top: 4rem;
+        margin-left: 2rem;
     }
+    
 
     &__logo {
-        height: 3.5rem;
+        // height: 3.5rem;
+        height: 12rem;
     }
     
     &__text-box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        /* background-color: red; */
-        transform: translate(-50%, -50%);
-        text-align: center;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // /* background-color: red; */
+        // transform: translate(-50%, -50%);
+        // text-align: center;
+
+        // position: absolute;
+        // top: 4rem;
+        // right: 4rem;
+
+        float: right;
+        margin-top: 6rem;
+        margin-right: 1rem;
     }
 }
