--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,16 @@
     padding: 25rem 0;
     // margin-top: -5vh;
 }
+
+.section-content {
+    height: 95vh;
+
+       background-image: url(../img/hero.jpg); 
+    // background-image: linear-gradient(
+    //     to right bottom,
+    //     rgba($color-primary-light, 0.801),
+    //     rgba($color-primary-dark, 0.801)),
+    // url(../img/hero.jpg);
+    // background-size: cover;
+    // background-position: top;
+}
