--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,10 @@ body {
         animation-iteration-count: 3;
         */ }
   .heading-primary--sub {
+    text-align: right;
     display: block;
     font-size: 2.6rem;
-    margin-top: -1rem;
-    float: right; }
+    margin-top: -1rem; }
 
 .emphasize {
   font-style: italic; }
@@ -210,16 +210,21 @@ body {
   .expand .col-0-of-3 {
     width: calc( (100% - 2 * 6rem) / 3 + 6rem);
     margin-right: 0 !important;
-    background-color: orange;
-    float: left; }
+    background-color: #ffffff;
+    float: left;
+    height: 120%; }
   .expand .col-3-of-3 {
     width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem);
-    background-color: green;
-    float: left; }
+    background-color: #9b1919;
+    float: left;
+    margin-left: calc( (100% - 2 * 6rem) / 3 + 6rem); }
 
 .header {
-  height: 95vh;
   /* background-image: url(../img/hero.jpg); */ }
+  .header::after {
+    content: "";
+    display: table;
+    clear: both; }
   .header__logo-box {
     float: left;
     margin-top: 4rem;
@@ -231,10 +236,35 @@ body {
     margin-top: 6rem;
     margin-right: 1rem; }
 
+.navigation__list {
+  list-style: none;
+  margin-left: 2.5rem;
+  margin-top: 5rem; }
+
+.navigation__item {
+  margin: 1rem; }
+  .navigation__item--nested {
+    margin-left: 10rem;
+    font-size: 2.2rem;
+    text-decoration: none; }
+    .navigation__item--nested li a:link, .navigation__item--nested li a:visited {
+      display: inline-block;
+      text-decoration: none;
+      color: #009999;
+      padding: .5rem .5rem; }
+
+.navigation__link {
+  display: inline-block;
+  padding: 1rem 2rem;
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #009999;
+  text-decoration: none;
+  text-transform: uppercase; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0; }
 
 .section-content {
-  height: 95vh;
-  background-image: url(../img/hero.jpg); }
+  height: 95vh; }
