--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -39,13 +39,17 @@ body {
     }
 
     &--sub {
+
+        text-align: right;
+      
+
         display: block;
         font-size: 2.6rem;
         margin-top: -1rem;
         // font-weight: 700;
         // letter-spacing: 1.75rem;
         // animation: moveInRight 1s ease-out;
-        float: right;
+        // float: right;
     }
 }
 
