--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header {
-    height: 95vh;
+    //height: 95vh;
+    // height: 100vh;
     /* background-image: url(../img/hero.jpg); */
     // background-image: linear-gradient(
     //     to right bottom,
@@ -10,7 +11,11 @@
     // background-position: top;
     // position: relative;
 
+    @include clearfix;
+
     &__logo-box {
+
+       
         // position: absolute;
         // top: 4rem;
         // left: 4rem;
