--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,7 +7,7 @@
 .section-content {
     height: 95vh;
 
-       background-image: url(../img/hero.jpg); 
+      // background-image: url(../img/hero.jpg); 
     // background-image: linear-gradient(
     //     to right bottom,
     //     rgba($color-primary-light, 0.801),
