--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -31,38 +31,58 @@
         list-style: none;
         // text-align: center;
         margin-left: 2.5rem;
-        margin-top: 5rem;
+        margin-top: 3rem;
 
     }
 
     &__item {
+
         margin: 1rem;
         
         &--nested {
 
             margin-left: 10rem;
-            font-size: 2.2rem;
+            font-size: $default-font-size;
             
             text-decoration: none;
 
             li {
+
+                &:last-child {
+                    margin-bottom: 1.5rem;
+                }
+
                 a {
                     &:link,
                     &:visited {
                         display: inline-block;
                         text-decoration: none;
                         color: $color-teal;
-                        padding: .5rem .5rem;
+                        padding-bottom: 3px;
+
+                        //padding: .5rem .5rem;
+
+                        border-bottom: 1px solid transparent;
 
                     }
 
                     &:hover,
                     &:active {
+                        //text-decoration: underline;
+                       // padding: 1rem 1rem;
+                        //border-bottom-width: 1px;
+                       // border-bottom-style: solid;
+                        border-bottom: 1px solid teal;
+                        
+                        //padding: 3px;
+                        //transition: all .2s;
                         
                     }
                    
                     
                 }
+
+
             }
 
         }
@@ -73,13 +93,15 @@
        
             // cursor: default;
             display: inline-block;
-            padding: 1rem 2rem;
-            font-size: 2.4rem;
-            font-weight: 700;
+            padding: 0rem 1rem;
+            font-size: 1.8rem;
+            // font-size: 3rem;
+            font-weight: 500;
             // color: $color-white;
-            color: $color-teal;
+           // color: $color-teal;
+            color: midnightblue;
             text-decoration: none;
-            text-transform: uppercase;
+            // text-transform: uppercase;
 
         &:hover,
         &:active {
