--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,14 +5,18 @@
 }
 
 .section-content {
-    height: 95vh;
+    //height: 95vh;
+    height: 100vh;
 
-      // background-image: url(../img/hero.jpg); 
+    background-image: url(../img/hero2.jpg); 
     // background-image: linear-gradient(
     //     to right bottom,
     //     rgba($color-primary-light, 0.801),
     //     rgba($color-primary-dark, 0.801)),
-    // url(../img/hero.jpg);
-    // background-size: cover;
-    // background-position: top;
+    // url(../img/ira-potrait.jpg);
+    background-size: cover;
+    background-position: top;
+
+
+    
 }
