--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
   backface-visibility: hidden; }
   .heading-primary--main {
     display: block;
-    font-size: 3rem;
+    font-size: 2.2rem;
     /* 
         animation-delay: 3s;
         animation-iteration-count: 3;
@@ -209,15 +209,13 @@ body {
     clear: both; }
   .expand .col-0-of-3 {
     width: calc( (100% - 2 * 6rem) / 3 + 6rem);
-    margin-right: 0 !important;
-    background-color: #ffffff;
+    background-color: aquamarine;
     float: left;
     height: 120%; }
   .expand .col-3-of-3 {
     width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem);
     background-color: #9b1919;
-    float: left;
-    margin-left: calc( (100% - 2 * 6rem) / 3 + 6rem); }
+    float: left; }
 
 .header {
   /* background-image: url(../img/hero.jpg); */ }
@@ -239,32 +237,39 @@ body {
 .navigation__list {
   list-style: none;
   margin-left: 2.5rem;
-  margin-top: 5rem; }
+  margin-top: 3rem; }
 
 .navigation__item {
   margin: 1rem; }
   .navigation__item--nested {
     margin-left: 10rem;
-    font-size: 2.2rem;
+    font-size: 1.6rem;
     text-decoration: none; }
+    .navigation__item--nested li:last-child {
+      margin-bottom: 1.5rem; }
     .navigation__item--nested li a:link, .navigation__item--nested li a:visited {
       display: inline-block;
       text-decoration: none;
       color: #009999;
-      padding: .5rem .5rem; }
+      padding-bottom: 3px;
+      border-bottom: 1px solid transparent; }
+    .navigation__item--nested li a:hover, .navigation__item--nested li a:active {
+      border-bottom: 1px solid teal; }
 
 .navigation__link {
   display: inline-block;
-  padding: 1rem 2rem;
-  font-size: 2.4rem;
-  font-weight: 700;
-  color: #009999;
-  text-decoration: none;
-  text-transform: uppercase; }
+  padding: 0rem 1rem;
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: midnightblue;
+  text-decoration: none; }
 
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0; }
 
 .section-content {
-  height: 95vh; }
+  height: 100vh;
+  background-image: url(../img/hero2.jpg);
+  background-size: cover;
+  background-position: top; }
