--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,8 @@ Dark green: #28b485
 
 $color-teal: #009999;
 
+$teal-color: #008080;
+
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
