--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -59,16 +59,18 @@
     &:link,
     &:visited {
         font-size: $default-font-size;
-        color: $color-primary;
+        color: teal;
         display: inline-block; //display inline block so that we can use the box model property on it like padding, margin...
         text-decoration: none;
-        border-bottom: 1px solid $color-primary;
+        border-bottom: 1px solid #008080;
         padding: 3px;
         transition: all .2s;
+        margin-left: 4rem;
+        margin-top: 2rem;
     }
 
     &:hover {
-        background-color: $color-primary;
+        background-color: $teal-color;
         color: $color-white;
         box-shadow: 0 1rem 2rem rgba($color-black, .15);
         transform: translateY(-2px);
