--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,6 +17,56 @@
     background-size: cover;
     background-position: top;
 
+}
 
+.section-workshop {
+    // height: 100vh;
+    padding: 7%;
+    background-color: #ffffff;
+
+    .entry-text {
+        padding-bottom: 5rem;
+
+        .heading-five {
+            font-size: 1.2rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            color: midnightblue;
+            margin-bottom: 0.6rem;
+        }
+
+        .heading-one {
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 1rem;
+            color: teal;
+        }
+    }
+
+    .entry-reasons {
+
+        .entry-reasons-container {
+            margin-left: 4rem;
+            position: relative;
+
+            .icon-heart {
+                position: absolute;
+                width: 3rem;
+                height: 3rem;
+                top: -.4rem;
+                left: -4rem;
+                color: teal;
+                font-size: 2.6rem;
+                text-align: center;
+            }
+
+            .heading-four {
+                font-size: 1.7rem;
+                margin-bottom: 1rem;
+                color: midnightblue;
+            }
+        }
+    }
     
 }
