--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,13 +2,21 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
+
+
+
+
+
+
+
+
 @import "base/animations";
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
 @import "components/button";
-
+@import "components/footer";
 
 @import "layout/grid";
 @import "layout/header";
