--- a/css/style.css
+++ b/css/style.css
@@ -175,8 +175,78 @@ body {
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
 
+.footer {
+  background-color: #005050;
+  text-align: center;
+  font-size: 1.6rem;
+  padding: 6rem;
+  color: #929292; }
+  .footer p {
+    margin-bottom: .3rem; }
+  .footer__logo-box {
+    text-align: left;
+    margin-bottom: 2rem; }
+  .footer__logo {
+    width: 8rem;
+    height: auto;
+    margin-left: 8rem; }
+  .footer__navigation {
+    border-top: 1px solid #eee;
+    padding-top: 2rem;
+    display: inline-block; }
+  .footer__list {
+    list-style: none;
+    float: right; }
+  .footer__item {
+    display: inline-block;
+    font-size: 3.5rem; }
+    .footer__item:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link:link, .footer__link:visited {
+    color: #eeeeee;
+    background-color: #005050;
+    display: inline-block;
+    transition: all .2s;
+    height: 6.6rem;
+    width: 6.6rem;
+    border-radius: 50%;
+    padding-top: 1.1rem; }
+  .footer__link:hover, .footer__link:active {
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4); }
+  .footer__link:hover .icon-mail {
+    color: teal; }
+  .footer__link:hover .icon-fb {
+    color: #3b5998; }
+  .footer__link:hover .icon-tw {
+    color: #00aced; }
+  .footer__copyright {
+    color: #f7f7f7;
+    float: right;
+    width: 80%;
+    padding-top: 2rem; }
+
+.icon-mail,
+.icon-fb,
+.icon-tw {
+  transition: color 0.2s; }
+
+.icon-moyo {
+  vertical-align: text-bottom;
+  color: #ff3030;
+  margin: 0 .2rem; }
+
+.para_link:link,
+.para_link:visited {
+  color: #999;
+  transition: color 0.2s; }
+
+.para_link:hover,
+.para_link:active {
+  color: #ccc; }
+
 .row {
-  max-width: 114rem; }
+  max-width: 114rem;
+  margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 4rem; }
   .row::after {
