--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,12 @@
 }
 
 html {
+    height: 100%;
     // This defines what 1 rem is
     font-size: 62.5%; /*  10px/16   */
 }
 
 body {
+    height: 100%;
     box-sizing: border-box; 
 }
